crates/lingui_macro/tests/snapshots/jsx_named_placeholders__deduplication_with_stripped_props.snap
---
source: crates/lingui_macro/tests/jsx_named_placeholders.rs
info:
  jsx_placeholder_attribute: _t
---
import { Trans } from "@lingui/react/macro";
<Trans>Hello <a _t="link" href="/a">link 1</a>, normal, <a _t="link" href="/a">link 1 copy</a> and <a _t="link" href="/b">link 2</a>.</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

error: Multiple distinct JSX elements with the same placeholder name (`link`). Differentiate them by adding/modifying the `_t` attribute (e.g. `<element _t="newName" />`).
 --> input.tsx:2:100
  |
2 | <Trans>Hello <a _t="link" href="/a">link 1</a>, normal, <a _t="link" href="/a">link 1 copy</a> and <a _t="link" href="/b">link 2</a>.</Trans>;
  |                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^^
