crates/lingui_macro/tests/snapshots/jsx_named_placeholders__different_spreads_throw.snap
---
source: crates/lingui_macro/tests/jsx_named_placeholders.rs
info:
  jsx_placeholder_attribute: _t
---
import { Trans } from '@lingui/react/macro';
<Trans><a _t="same" {...spread1}>A</a> <a _t="same" {...spread2}>B</a></Trans>

↓ ↓ ↓ ↓ ↓ ↓

error: Multiple distinct JSX elements with the same placeholder name (`same`). Differentiate them by adding/modifying the `_t` attribute (e.g. `<element _t="newName" />`).
 --> input.tsx:2:40
  |
2 | <Trans><a _t="same" {...spread1}>A</a> <a _t="same" {...spread2}>B</a></Trans>
  |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^
