crates/lingui_macro/tests/snapshots/jsx_named_placeholders__same_name_different_element_throws.snap
---
source: crates/lingui_macro/tests/jsx_named_placeholders.rs
info:
  jsx_placeholder_attribute: _t
---
import { Trans } from '@lingui/react/macro';
<Trans><em _t="same">A</em> and <strong _t="same">B</strong></Trans>

↓ ↓ ↓ ↓ ↓ ↓

error: Multiple distinct JSX elements with the same placeholder name (`same`). Differentiate them by adding/modifying the `_t` attribute (e.g. `<element _t="newName" />`).
 --> input.tsx:2:33
  |
2 | <Trans><em _t="same">A</em> and <strong _t="same">B</strong></Trans>
  |                                 ^^^^^^^^^^^^^^^^^^
