crates/lingui_macro/tests/snapshots/jsx_named_placeholders__supports_string_in_jsx_expression.snap
---
source: crates/lingui_macro/tests/jsx_named_placeholders.rs
info:
  jsx_placeholder_attribute: _t
---
import { Trans } from '@lingui/react/macro';
<Trans><a _t={"foo"} href="/">click</a></Trans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "CeJE1x",
    components: {
        foo: <a href="/"/>
    },
    message: "<foo>click</foo>"
}}/>;
